[package]
name = "zombie-shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
libm = "0.2.7"
bevy-inspector-egui = "0.18.3"

