[package]
name = "zombie-shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_rapier2d = { version = "0.22.0", features = [ "simd-stable", "debug-render-2d" ] }
libm = "0.2.7"
bevy-inspector-egui = "0.18.3"
rand = "0.8.5"


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"


[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"



# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1



